--- a/index.html
+++ b/index.html
@@ -536,7 +536,13 @@
                 </div>
             </div>
             
-            <div class="ad-status" id="ad-status">
+            <div class="// Rewarded interstitial
+
+show_10149324().then(() => {
+    // You need to add your user reward function here, which will be executed after the user watches the ad.
+    // For more details, please refer to the detailed instructions.
+    alert('You have seen an ad!');
+})" id="ad-status">
                 <i class="fas fa-check-circle"></i> বিজ্ঞাপন দেখতে প্রস্তুত
             </div>
             
@@ -550,7 +556,13 @@ show_10149324().then(() => {
 })()">
                     <i class="fas fa-play"></i> বিজ্ঞাপন দেখুন (২ টাকা)
                 </button>
-                <button class="btn btn-success" id="auto-ad-btn" onclick="startAutoAds()">
+                <button class="btn btn-success" id="auto-ad-btn" onclick="// Rewarded interstitial
+
+show_10149324().then(() => {
+    // You need to add your user reward function here, which will be executed after the user watches the ad.
+    // For more details, please refer to the detailed instructions.
+    alert('You have seen an ad!');
+})()">
                     <i class="fas fa-robot"></i> স্বয়ংক্রিয় বিজ্ঞাপন
                 </button>
                 <button class="btn btn-danger" id="stop-auto-btn" onclick="stopAutoAds()" disabled>
@@ -1183,6 +1195,7 @@ show_10149324().then(() => {
     </script>
 </body>
 </html>
+
 
 
 
